--- a/exam-system/src/main/resources/application.properties
+++ b/exam-system/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# Default Error Page
+spring.mvc.throw-exception-if-no-handler-found=true
