--- a/exam-system/src/main/resources/application.properties
+++ b/exam-system/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=exam-system
+application.title= Exam System
+application.version= v1.0.0
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_system
